@@ -25,8 +25,7 @@ commons-cli.version=1.2
 commons-codec.version=1.4
 commons-io.version=2.3
 commons-el.version=1.0
-commons-logging.version=1.1.1
-commons-lang.version=2.6
+commons-logging.version=1.2
 commons-configuration.version=1.6
 commons-collections.version=3.2.1
 commons-collections4.version=4.0
@@ -40,7 +39,7 @@ hadoop-common.version=2.7.3
 hadoop-hdfs.version=2.7.3
 hadoop-mapreduce.version=2.7.3
 hbase1.version=1.2.4
-hsqldb.version=1.8.0.10
+hsqldb.version=2.4.0
 hive.version=1.2.1
 httpcomponents.version=4.4
 jackson.version=1.9.13
